syntax = "proto3";
import "romi.proto";

package romi.sys;


//ping pong 
message ping 
{
	uint64 engine_id = 1;
};

message pong
{
	uint64 engine_id = 1;
};

message job_done
{	
	uint64 job_id = 1;
}

//net
message net_connect
{
	string remote_addr = 1;
	uint64 engine_id = 2;
	addr from = 3;
}

message net_connect_notify
{
	net_connect net_connect = 1;
	bool is_connecting = 2;
}

message net_not_actor
{
	addr addr = 1;	
};

message net_not_engine_id
{
	addr addr = 1;	
};

message actor_init 
{ 

};


message engine_offline 
{ 
	uint64 engine_id = 1;
};

//timer
message timer_expire 
{ 
	uint64 timer_id = 1; 
};


//watcher
message add_watcher 
{ 
	addr addr = 1; 
};

message del_watcher 
{ 
	addr addr = 1; 
};

message actor_close 
{ 
	addr addr = 1;
};